--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "framer-motion": "^12.1.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.6",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^3.0.1"
+    "react-toastify": "^11.0.3",
+    "tailwind-merge": "^3.0.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
