--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "framer-motion": "^12.1.0",
     "jwt-decode": "^4.0.0",
     "next": "15.1.6",
