--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-phone-number-input": "^3.4.11",
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
     "zustand": "^5.0.3"
