--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# NEXT_PUBLIC_BASE_URL=http://localhost:9600
-NEXT_PUBLIC_BASE_URL=https://odo-backend-production.up.railway.app
+NEXT_PUBLIC_BASE_URL=http://localhost:9600
+# NEXT_PUBLIC_BASE_URL=https://odo-backend-production.up.railway.app
