--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookies-next": "^5.1.0",
     "framer-motion": "^12.1.0",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "next": "15.1.6",
     "query-string": "^9.1.1",
