--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@heroui/react": "^2.6.14",
     "@internationalized/date": "^3.7.0",
+    "@react-pdf/renderer": "^4.2.1",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
     "framer-motion": "^12.1.0",
+    "jsbarcode": "^3.11.6",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
